Fix responsivity problems on smaller devices

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -41,18 +41,16 @@ body {
 }
 
 #scroll-to-top {
-	position: fixed;
+	@apply hidden md:fixed bg-black no-underline;
 	bottom: 50px;
 	right: 50px;
-	background: rgb(0, 0, 0);
-	background: rgba(0, 0, 0, 0.75);
 	width: 50px;
 	height: 50px;
-	text-decoration: none;
+	background: rgba(0, 0, 0, 0.75);
+
 	-webkit-border-radius: 35px;
 	-moz-border-radius: 35px;
 	border-radius: 35px;
-	display: none;
 	-webkit-transition: all 0.3s linear;
 	-moz-transition: all 0.3s ease;
 	-ms-transition: all 0.3s ease;
@@ -60,12 +58,11 @@ body {
 	transition: all 0.3s ease;
 
 	i {
-		color: #fff;
-		margin: 0;
-		position: relative;
+		@apply text-white m-0 relative;
 		left: 16px;
 		top: 13px;
 		font-size: 19px;
+
 		-webkit-transition: all 0.3s ease;
 		-moz-transition: all 0.3s ease;
 		-ms-transition: all 0.3s ease;
@@ -73,11 +70,13 @@ body {
 		transition: all 0.3s ease;
 	}
 
-	&:hover {
-		background: rgba(0, 0, 0, 0.9);
-		i {
-			color: #fff;
-			top: 5px;
+	@media (hover: hover) {
+		&:hover {
+			background: rgba(0, 0, 0, 0.9);
+			i {
+				@apply text-white;
+				top: 5px;
+			}
 		}
 	}
 }
