--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -4,6 +4,6 @@
   }
 
   .carousel-item {
-    @apply w-screen h-screen;
+    @apply w-full h-full;
   }
 }
